stream_settings: Fix overlapping Unsubscribe button with side scroll.

--- a/web/styles/subscriptions.css
+++ b/web/styles/subscriptions.css
@@ -171,6 +171,7 @@ h4.user_group_setting_subsection_title {
             }
 
             .subscriber_list_remove {
+                padding-right: 18px;
                 display: inline-block;
             }
 
